--- a/app/src/main/res/layout/activity_recycler_view_demo_activity.xml
+++ b/app/src/main/res/layout/activity_recycler_view_demo_activity.xml
@@ -8,7 +8,7 @@
     tools:context="golhar.cocomo.zinger.RecyclerViewDemoActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_item_list"
+        android:id="@+id/item_listRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
