--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -13,72 +13,65 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/_20sdp">
         <RelativeLayout
-            android:id="@+id/user_details"
+            android:id="@+id/user_detailsRV"
             android:layout_width="wrap_content"
-            android:layout_height="128dp">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/user_name"
+                android:id="@+id/user_nameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="MAHIMA SUNDARARAJAN PARTHASARATHY"
+                android:text="MAHIMA S"
                 android:textColor="#000"
-                android:textSize="25sp"
+                android:textSize="@dimen/_20ssp"
                 android:textStyle="bold">
-
             </TextView>
 
             <TextView
-                android:id="@+id/user_no"
+                android:id="@+id/user_noTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/user_name"
-                android:layout_marginTop="9dp"
-                android:padding="5dp"
+                android:layout_below="@+id/user_nameTV"
+                android:layout_marginTop="@dimen/_6sdp"
+                android:padding="@dimen/_5sdp"
                 android:text="9090654232345">
-
             </TextView>
 
             <TextView
                 android:id="@+id/user_email"
-                android:layout_width="236dp"
-                android:layout_height="53dp"
-                android:layout_below="@+id/user_name"
-                android:layout_marginLeft="21dp"
-                android:layout_marginTop="6dp"
-                android:layout_toRightOf="@+id/user_no"
-                android:padding="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user_nameTV"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_toRightOf="@+id/user_noTV"
+                android:padding="@dimen/_3sdp"
                 android:text="welcometozingshkb@gmail.com">
-
             </TextView>
 
             <Button
-                android:id="@+id/user_edit"
-                android:layout_width="63dp"
-                android:layout_height="30dp"
+                android:id="@+id/user_editBT"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="0dp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_below="@+id/user_nameTV"
                 android:background="#fff"
                 android:text="EDIT"
                 android:textColor="#FF6600">
-
             </Button>
-
-
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/separator"
-            android:layout_below="@+id/user_details">
+            android:layout_below="@+id/user_detailsRV">
 
             <View
-
                 android:layout_width="match_parent"
-                android:layout_height="3.5dp"
+                android:layout_height="@dimen/_4sdp"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="-1dp"
                 android:layout_marginBottom="-2dp"
@@ -86,7 +79,7 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/pastorders"
+            android:id="@+id/past_ordersTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/separator"
@@ -95,72 +88,57 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="15dp"
+                android:padding="@dimen/_15sdp"
                 android:text="PAST ORDERS">
-
             </TextView>
-
-
         </RelativeLayout>
-
-
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/order_listRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pastorders"/>
-
+            android:layout_below="@+id/past_ordersTV"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/more"
-            android:layout_below="@+id/item_listRV">
-
+            android:id="@+id/separator2"
+            android:layout_below="@+id/order_listRV">
             <View
-
-                android:id="@+id/separator2"
                 android:layout_width="match_parent"
-                android:layout_height="4.5dp"
+                android:layout_height="@dimen/_4sdp"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="-1dp"
                 android:layout_marginBottom="-2dp"
                 android:background="#000" />
-
-            <Button
-                android:id="@+id/view_more_bt"
-                android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:layout_below="@+id/separator2"
-
-                android:background="#fff"
-
-                android:text="   VIEW MORE ORDERS"
-                android:textAlignment="textStart"
-                android:textColor="#FF6600">
-
-            </Button>
-
-            <Button
-                android:id="@+id/logout_bt"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@id/view_more_bt"
-
-
-                android:layout_marginBottom="0dp"
-                android:background="#fff"
-                android:text="   LOGOUT"
-                android:textAlignment="textStart"
-                android:textColor="#000">
-
-            </Button>
-
         </RelativeLayout>
 
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/separator2"
+    android:id="@+id/moreRV">
 
+        <Button
+            android:id="@+id/view_moreBT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:text="   VIEW MORE ORDERS"
+            android:textAlignment="textStart"
+            android:textColor="#FF6600">
+        </Button>
+
+        <Button
+            android:id="@+id/logout_BT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view_moreBT"
+            android:background="#fff"
+            android:text="   LOGOUT"
+            android:textAlignment="textStart"
+            android:textColor="#000">
+        </Button>
+        </RelativeLayout>
     </RelativeLayout>
-
 </LinearLayout>
