--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,44 +26,16 @@
         android:layout_marginTop="@dimen/_15sdp"/>
 
     <Button
-        android:id="@+id/locationB"
+        android:id="@+id/loginB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/word1TV"
         android:gravity="center_vertical"
         android:layout_centerHorizontal="true"
-        android:text="SET DELIVERY LOCATION"
+        android:text="LOGIN"
         android:textStyle="bold"
         android:textSize="@dimen/_15ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:paddingHorizontal="@dimen/_30sdp"></Button>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/locationB"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal">
-        <TextView
-            android:id="@+id/word2TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Have an account? "
-            android:textAlignment="center"
-            android:textColor="#A9A9A9"
-            android:gravity="center_horizontal"
-            android:textSize="@dimen/_10ssp"></TextView>
-
-        <TextView
-            android:id="@+id/LoginTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:textAlignment="center"
-            android:textColor="#0000FF"
-            android:gravity="center_horizontal"
-            android:textSize="@dimen/_10ssp"
-            android:onClick="OnClick"
-            android:clickable="true"></TextView>
-
-    </LinearLayout>
+=
 </RelativeLayout>
