--- a/app/src/main/res/layout/activity_otp__verification.xml
+++ b/app/src/main/res/layout/activity_otp__verification.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="golhar.cocomo.zinger.OtpVerification">
+    tools:context="golhar.cocomo.zinger.OtpVerificationActivity">
 
     <LinearLayout
         android:id="@+id/ll1"
