--- a/app/src/main/res/layout/college_list_item.xml
+++ b/app/src/main/res/layout/college_list_item.xml
@@ -2,23 +2,50 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/food_itemIV"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingHorizontal="@dimen/_15sdp"
+    android:layout_marginTop="@dimen/_15sdp">
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/CollegeProfileImageCIV"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="@dimen/_60sdp"
         android:src="@mipmap/ic_launcher"
-        android:layout_centerInParent="true"
-        android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_200sdp"
-        android:clickable="true"/>
+        app:civ_border_width="@dimen/_2sdp"
+        app:civ_border_color="#FF000000"/>
 
-    <TextView
-        android:id="@+id/itemTV"
-        android:layout_below="@+id/food_itemIV"
-        android:textAlignment="center"
-        android:layout_marginTop="@dimen/_25sdp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_14ssp"/>
+        android:orientation="vertical">
+    <TextView
+        android:id="@+id/CollegNameTV"
+        android:layout_below="@+id/food_itemIV"
+        android:paddingLeft="@dimen/_15sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_24ssp"
+        android:layout_toRightOf="@id/CollegeProfileImageCIV"
+        android:text="ssn"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
+
+       <TextView
+            android:id="@+id/CollegeAddressTV"
+            android:layout_below="@+id/CollegNameTV"
+            android:paddingLeft="@dimen/_15sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_14ssp"
+            android:text="Kalavakkam"
+           android:textColor="#000000"/>
+    </LinearLayout>
+</LinearLayout>
+
 
 </RelativeLayout>
