--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -124,7 +124,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#fff"
-            android:text="   VIEW MORE ORDERS"
+            android:paddingLeft="@dimen/_8sdp"
+            android:text="VIEW MORE ORDERS"
             android:textAlignment="textStart"
             android:textColor="#FF6600">
         </Button>
@@ -134,8 +135,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view_moreBT"
+            android:paddingLeft="@dimen/_8sdp"
             android:background="#fff"
-            android:text="   LOGOUT"
+            android:text="LOGOUT"
             android:textAlignment="textStart"
             android:textColor="#000">
         </Button>
