--- a/app/src/main/res/layout/order_history_row.xml
+++ b/app/src/main/res/layout/order_history_row.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/_10sdp"
     android:visibility="visible">
-
-
     <RelativeLayout
         android:id="@+id/orderRV"
         android:layout_width="wrap_content"
@@ -31,7 +28,7 @@
             </TextView>
 
             <TextView
-                android:id="@+id/hotel_price"
+                android:id="@+id/hotel_priceTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/hotel_nameTV"
