--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -13,57 +13,58 @@
         android:padding="@dimen/_20sdp">
 
         <RelativeLayout
-            android:id="@+id/user_detailsRV"
+            android:id="@+id/userDetailsRV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/user_nameTV"
+                android:id="@+id/userNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MAHIMA S"
                 android:textColor="#000"
                 android:textSize="@dimen/_20ssp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/user_noTV"
+                android:id="@+id/userNumTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/user_nameTV"
+                android:layout_below="@+id/userNameTV"
                 android:layout_marginTop="@dimen/_6sdp"
                 android:padding="@dimen/_5sdp"
-                android:text="9090654232345"></TextView>
+                android:text="9090654232345" />
 
             <TextView
-                android:id="@+id/user_email"
+                android:id="@+id/userEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/user_nameTV"
+                android:layout_below="@+id/userNameTV"
                 android:layout_marginLeft="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_6sdp"
-                android:layout_toRightOf="@+id/user_noTV"
+                android:layout_toRightOf="@+id/userNumTV"
                 android:padding="@dimen/_3sdp"
-                android:text="welcometozingshkb@gmail.com"></TextView>
+                android:singleLine="true"
+                android:text="welcometozingshkb@gmail.com" />
 
             <Button
-                android:id="@+id/user_editBT"
+                android:id="@+id/userEditBT"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_20sdp"
-                android:layout_below="@+id/user_nameTV"
+                android:layout_below="@+id/userNameTV"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:background="#fff"
                 android:text="EDIT"
-                android:textColor="#FF6600"></Button>
+                android:textColor="#FF6600" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/separator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/user_detailsRV">
+            android:layout_below="@+id/userDetailsRV">
 
             <View
                 android:layout_width="match_parent"
@@ -75,7 +76,7 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/past_ordersTV"
+            android:id="@+id/pastOrdersTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/separator"
@@ -85,20 +86,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_15sdp"
-                android:text="PAST ORDERS"></TextView>
+                android:text="PAST ORDERS" />
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/order_listRV"
+            android:id="@+id/orderListRV"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/past_ordersTV" />
+            android:layout_height="@dimen/_350sdp"
+            android:layout_below="@+id/pastOrdersTV" />
 
         <RelativeLayout
             android:id="@+id/separator2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/order_listRV">
+            android:layout_below="@+id/orderListRV">
 
             <View
                 android:layout_width="match_parent"
@@ -113,28 +114,29 @@
             android:id="@+id/moreRV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/separator2">
+            android:layout_below="@+id/separator2"
+            android:layout_alignParentBottom="true">
 
             <Button
-                android:id="@+id/view_moreBT"
+                android:id="@+id/viewMoreBT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#fff"
                 android:paddingLeft="@dimen/_8sdp"
                 android:text="VIEW MORE ORDERS"
                 android:textAlignment="textStart"
-                android:textColor="#FF6600"></Button>
+                android:textColor="#FF6600" />
 
             <Button
-                android:id="@+id/logout_BT"
+                android:id="@+id/logoutBT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/view_moreBT"
+                android:layout_below="@+id/viewMoreBT"
                 android:background="#fff"
                 android:paddingLeft="@dimen/_8sdp"
                 android:text="LOGOUT"
                 android:textAlignment="textStart"
-                android:textColor="#000"></Button>
+                android:textColor="#000" />
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
