--- a/app/src/main/res/layout/order_history_row.xml
+++ b/app/src/main/res/layout/order_history_row.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/_10sdp"
     android:visibility="visible">
 
@@ -19,21 +18,21 @@
             android:padding="@dimen/_10sdp">
 
             <TextView
-                android:id="@+id/hotel_nameTV"
+                android:id="@+id/hotelNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:text="Gangotree"
                 android:textSize="@dimen/_20sdp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/hotel_priceTV"
+                android:id="@+id/hotelPriceTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/hotel_nameTV"
+                android:layout_below="@+id/hotelNameTV"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:text="₹250"></TextView>
+                android:text="₹250" />
 
             <ImageView
                 android:id="@+id/Hotel_tickIV"
@@ -42,16 +41,16 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="@dimen/_3sdp"
-                android:src="@drawable/ic_check_circle"></ImageView>
+                android:src="@drawable/ic_check_circle" />
 
             <TextView
-                android:id="@+id/hotel_statusTV"
+                android:id="@+id/hotelStatusTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/_15sdp"
                 android:layout_toLeftOf="@id/Hotel_tickIV"
-                android:text="Picked-up"></TextView>
+                android:text="Picked-up" />
         </RelativeLayout>
 
         <View
@@ -62,77 +61,87 @@
             android:layerType="software" />
 
         <RelativeLayout
-            android:id="@+id/order_detailsRV"
+            android:id="@+id/orderDetailsRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/hotelRV">
 
             <TextView
-                android:id="@+id/order_itemsTV"
+                android:id="@+id/orderItemsTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:text="Sev Puri x1, Dahi Papri Chaat x 1"
-                android:textSize="@dimen/_12ssp"></TextView>
+                android:textSize="@dimen/_12ssp" />
 
             <TextView
-                android:id="@+id/order_dateTV"
+                android:id="@+id/orderDateTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/order_itemsTV"
+                android:layout_below="@+id/orderItemsTV"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:text="March 5, 5:45 PM"></TextView>
+                android:text="March 5, 5:45 PM" />
 
             <Button
-                android:id="@+id/but_reorderBT"
+                android:id="@+id/reorderBT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/order_dateTV"
+                android:layout_below="@+id/orderDateTV"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:background="#fff"
                 android:padding="@dimen/_8sdp"
                 android:text="REORDER"
-                android:textColor="#ff6600"></Button>
+                android:textColor="#ff6600" />
 
             <Button
-                android:id="@+id/but_rate"
+                android:id="@+id/rateBT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/order_dateTV"
+                android:layout_below="@+id/orderDateTV"
                 android:layout_marginLeft="@dimen/_45sdp"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:layout_toRightOf="@+id/but_reorderBT"
+                android:layout_toRightOf="@+id/reorderBT"
                 android:background="#fff"
                 android:padding="@dimen/_8sdp"
-                android:text="RATE FOOD"></Button>
+                android:text="RATE FOOD" />
 
             <TextView
-                android:id="@+id/order_rateTV"
+                android:id="@+id/orderRateTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/but_reorderBT"
+                android:layout_below="@id/reorderBT"
                 android:padding="@dimen/_5sdp"
-                android:text="Your food rating"></TextView>
+                android:text="Your food rating" />
 
             <ImageView
                 android:id="@+id/star_imgIV"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
-                android:layout_below="@id/order_rateTV"
+                android:layout_below="@id/orderRateTV"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_3sdp"
-                android:src="@drawable/ic_star"></ImageView>
+                android:src="@drawable/ic_star" />
 
             <TextView
-                android:id="@+id/order_yourratingTV"
+                android:id="@+id/orderRatingTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/order_rateTV"
+                android:layout_below="@id/orderRateTV"
                 android:layout_marginLeft="-57dp"
-                android:layout_toRightOf="@id/order_rateTV"
+                android:layout_toRightOf="@id/orderRateTV"
                 android:text="4"
                 android:textSize="@dimen/_18ssp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_4sdp"
+            android:layout_below="@+id/orderDetailsRV"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="-1dp"
+            android:layout_marginBottom="-2dp"
+            android:background="#000" />
+
     </RelativeLayout>
 </RelativeLayout>
