--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -135,6 +134,7 @@
                 android:background="#fff"
                 android:paddingLeft="@dimen/_8sdp"
                 android:text="LOGOUT"
+                android:layout_alignParentBottom="true"
                 android:textAlignment="textStart"
                 android:textColor="#000" />
         </RelativeLayout>
