--- a/app/src/main/res/layout/order_history_row.xml
+++ b/app/src/main/res/layout/order_history_row.xml
@@ -35,7 +35,7 @@
                 android:text="₹250" />
 
             <ImageView
-                android:id="@+id/Hotel_tickIV"
+                android:id="@+id/hotelTickIV"
                 android:layout_width="@dimen/_12sdp"
                 android:layout_height="@dimen/_12sdp"
                 android:layout_alignParentTop="true"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/_15sdp"
-                android:layout_toLeftOf="@id/Hotel_tickIV"
+                android:layout_toLeftOf="@id/hotelTickIV"
                 android:text="Picked-up" />
         </RelativeLayout>
 
@@ -114,7 +114,7 @@
                 android:text="Your food rating" />
 
             <ImageView
-                android:id="@+id/star_imgIV"
+                android:id="@+id/StarImgIV"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_below="@id/orderRateTV"
