--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -35,7 +35,7 @@
                 android:text="9090654232" />
 
             <TextView
-                android:id="@+id/userEmail"
+                android:id="@+id/userEmailTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/userNameTV"
